# SelfConfig-GP-for-NeuronNetwork

./: .gitignore  AdaptiveGeneticProgramming.cpp  AdaptiveGeneticProgramming.h  CMakeLists.txt  CrossoverGP.h  FormingGP.h  MutationGP.h  Neuron.h  Num_2.txt  Num_3.txt  SelectionGP.h  Self-Adaptive GeneticProgramming Cluster.rar  Self-Adaptive GeneticProgramming.sln  Self-Adaptive GeneticProgramming.vcxproj  Self-Adaptive GeneticProgramming.vcxproj.filters  SelfConfig GP for NeuronNetwork.sln  SelfConfig GP for NeuronNetwork.vcxproj  SelfConfig GP for NeuronNetwork.vcxproj.filters  Source.cpp  Tree.cpp  Tree.h  best.txt  test.txt
Diff_evolution/: DiffEvolution.cpp  DiffEvolution.h  DiffMutation.cpp  DiffMutation.h  IndividualDiffEvolution.cpp  IndividualDiffEvolution.h
Points/: Out_22.txt
Probabilities/: ProbabilCross_1.txt  ProbabilCross_11.txt  ProbabilCross_12.txt  ProbabilCross_13.txt  ProbabilCross_20.txt  ProbabilCross_22.txt  ProbabilCross_3.txt  ProbabilCross_32.txt  ProbabilCross_33.txt  ProbabilCross_34.txt  ProbabilMut_1.txt  ProbabilMut_10.txt  ProbabilMut_11.txt  ProbabilMut_15.txt  ProbabilMut_21.txt  ProbabilMut_23.txt  ProbabilMut_3.txt  ProbabilSel_1.txt  ProbabilSel_10.txt  ProbabilSel_13.txt  ProbabilSel_20.txt  ProbabilSel_30.txt  ProbabilSel_32.txt  ProbabilSel_33.txt
Results/: Input_10.txt  Input_11.txt  Input_12.txt  Input_13.txt  Input_23.txt  Input_24.txt  Input_30.txt  Input_34.txt
SAGP/: AdaptiveGeneticProgramming.cpp  AdaptiveGeneticProgramming.h  CrossoverGP.h  FormingGP.h  MutationGP.h  SelectionGP.h
general/: general_var.h  (+1 more)
(+240 files in other folders)
